4.0/docs/platform-deep-dive/plugins/custom-plugins/task-management/task-management-overview.mdx
---
title: Task Management
description: The Task management plugin is a powerful plugin that enables back-officers and supervisors to efficiently track and assign tasks within a company. It provides a business-oriented view of a **process** defined using FlowX Designer and allows for seamless interactions at the assignment level.
---

![Task Manager](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/task_management_overview.gif)

## Activities

Within the **Task Manager** section, particularly under **All Tasks**, you'll find the **Activities** tab, featuring:

* **Title**: The task's title.
* **Stage**: The specific [stages](./using-stages) during process execution.
* **Assignee**: The person responsible for the process.
* **Status**: The current process status (details in [Process status updates](#process-status-updates)).
* **Priority**: Allows task prioritization.
* **Last Updated**: Timestamp for the latest updates.
* **Search**: A search function to find process keys stored in the process.


![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/indexed_keys.png)

## Task Details

The **Task Details** tab within **Task Manager** provides key process information, including:

* **Priority**: Enables task prioritization.
* **Status**: The current process status.
* **Stage**: Specific stages during process execution.
* **Comments**: User comments.
* **History**: Information such as task creation, creator, and status changes.


![Task details](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/task_mngmnt_task_details.png)

<Info>
Please note that specific roles must be defined in a process to utilize all task management features. For configuration details, see [**Configuring Access Roles for Task Management**](../../../../../setup-guides/plugins-access-rights/configuring-access-rights-for-task-management).
</Info>

## Process status updates

Task Manager displays various statuses based on process state:


| Status         | Definition                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| **Created**    | This status is visible only if there is an issue with the process creation. If the process is error-free in its configuration, you will see the **Started** status instead.                                                                                                                                                                                                                                                                                                          |
| **Started**    | Indicates that the process is in progress and running.                                                                                                                                                                                                                                                                                                                                                                                                                               |
| **Finished**   | The process has reached an end node and completed its execution.                                                                                                                                                                                                                                                                                                                                                                                                                     |
| **Failed**     | Displayed when a [CronJob](https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/) is enabled in the [FlowX Engine](../../../core-components/flowx-engine). For example, if a CronJob is triggered but not completed on time, tasks move to the `FAILED` status.                                                                                                                                                                                                       |
| **Expired**    | <p>Displayed when <code>expiryTime</code> field is defined within the process definition. To set up an <code>expiryTime</code> function, follow these steps</p><ol><li>Go to <strong>FLOWX Designer > Processes > Definitions</strong>.</li><li>Select a process and click the "<strong>⋮</strong>" <strong></strong> button, then choose <strong>Settings.</strong></li><li>Inside the <strong>General</strong> tab, you can edit the <strong>Expiry time</strong> field.</li></ol> |
| **Aborted**    | This status is available for processes that also contain subprocesses. When a subprocess is running (and the [token is moved backward](../../../../flowx-designer/managing-a-process-flow/moving-a-token-backwards-in-a-process) to redo a series of previous actions) - the subprocess will be aborted.                                                                                                                                                                             |
| **Dismissed**  | Available for processes that contain subprocesses. It is displayed when a user stops a subprocess.                                                                                                                                                                                                                                                                                                                                                                                   |
| **On hold**    | Freezes the process, blocking further actions. A superuser can trigger this status for clarification or unfreeze.                                                                                                                                                                                                                                                                                                                                                                    |
| **Terminated** | A request is sent via Kafka to terminate a process instance, ending all active tokens in the current process or subprocesses.                                                                                                                                                                                                                                                                                                                                                        |

## Swimlanes and Stages Updates


Task Manager also tracks swimlane and stage changes:

### Swimlanes Updates

| Status             | Definition                           |
| ------------------ | ------------------------------------ |
| **Swimlane Enter** | Marks token entering a new swimlane. |
| **Swimlane Exit**  | Indicates token exiting a swimlane.  |


### Stages Updates 

| Status          | Definition                        |
| --------------- | --------------------------------- |
| **Stage Enter** | Marks token entering a new stage. |
| **Stage Exit**  | Indicates token exiting a stage.  |


## Using the plugin

The Task Manager plugin offers a range of features tailored to different roles, including:


* [Assigning and Unassigning Tasks](#task-assignment-and-reassignment)
* [Managing On-Hold Projects](#managing-on-hold-projects)
* [Adding Comments](#adding-comments)
* [Viewing the application URL](#viewing-the-application)
* [Bulk Updates (via Kafka)](#bulk-updates)

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/task_operations.png)

<Tip>
You can configure Task Manager to send information/tasks about your process by enabling the **Use process in task management** button in the Process Settings menu. This allows the Task Manager plugin to send updates about the process.
</Tip>

**To set up Task Management to send updates on your process, follow these steps:**

1. In **FlowX Designer**, open the desired **process definition**.
2. Select the **Settings** tab from the left sidebar menu.
3. Enable the **Use process in task management** toggle butto

![Update task management](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/task_mngmnt_response.png)

<Info>
Some actions may be restricted based on user roles and access rights.
</Info>

**To set up Task Management to send extra updates on your process using only some specific areas of your process:**
 
1. In **FlowX Designer**, open your process definition.
2. Click the **Edit** button.
3. Select a node for Task Manager to trigger updates upon reaching.
4. Enable the **Update task management?** switch.

<Tip>
You can configure this action for multiple nodes.
</Tip>

![Update task management](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/platform-deep-dive/task_mngmnt_response1.png)

For detailed configuration steps, refer to the next section:

[Task Management plugin setup](../../../../../setup-guides/plugins-setup-guide/task-management-plugin-setup)

## Task Assignment and Reassignment 

Consider this scenario: you're the HR manager overseeing the onboarding process for new employees. In order to streamline this operation, you've opted to leverage a task manager plugin. This process consists of two key phases: the Initiation Stage and the Account Setup Stage, each requiring a designated team member.

The Initiation Stage has successfully concluded, marking the transition to the Account Setup Stage. At this juncture, it's essential to reassign the task, originally assigned to John Doe, to Jane Doe, a valuable member of the backoffice team.

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release34/tsk_assign.gif)

## Managing On-Hold Projects

As a project manager overseeing various ongoing projects, you may need to temporarily pause one due to unforeseen circumstances. To manage this, you use the "On Hold" status.

## Adding Comments 

When handling on-hold projects, document the reasons, inform the team, and plan for resumption. This pause helps address issues and ensures a smoother project flow upon resuming. Never forget to add comments:

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release34/tsk_hold_comment.gif)

## Viewing the Application

Property used to point to the application url where the flowx process is loaded.

### Process settings level

In the Process Definitions settings, navigate to the **Task Management** tab and locate the **Application URL** field. Here, paste the application URL where the process is loaded, following this format:

```
{baseURL}/processes/instance
```

Example:

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release34/tsk_view_app.png)


<Tip>
You can also use a predefined generic parameter as the URL: `${genericParameter}`.

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release34/tsk_generic_param.png)

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release34/tsk_generic_param1.png)

</Tip>

### Process data level

If task.baseUrl is specified in the process parameters, it will be sent to the Task Manager to update the tasks accordingly.
```java
output.put("task", {"baseUrl": "https://your_base_url"});
```



<Frame>
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/tsk_manager_base_url.png)
</Frame>

<Warning>
The `baseURL` set in the process data (business rules) will override the `baseURL` set in the process definition settings.
</Warning>

## Bulk updates

Send bulk update requests via Kafka (using Process Engine) to perform multiple operations at once. Use the Kafka topic:

* `KAFKA_TOPIC_PROCESS_OPERATIONS_BULK_IN` (defined in Process Engine) to send operations from "KAFKA_TOPIC_PROCESS_OPERATIONS_IN" as an array, allowing multiple operations at once. More details [**here**](../../../../../setup-guides/flowx-engine-setup-guide/engine-setup#topics-related-to-the-task-management-plugin).

Example of a bulk request:

```json
{

  "operations": [
    {
      "operationType": "HOLD",
      "taskId": "some task id",
      "processInstanceUuid": "d3aabfd8-d041-4c62-892f-22d17923b223", // the id of the process instance
      "swimlaneName": "Default", //name of the swimlane
      "owner": null,
      "author": "john.doe@flowx.ai",
      "requestID": "1234567891"
    },
    {
      "operationType": "HOLD",
      "taskId": "some task id",
      "processInstanceUuid": "d3aabfd8-d041-4c62-892f-22d17923b223",
      "swimlaneName": "Default", //name of the swimlane
      "owner": null,
      "author": "jonh.doe@flowx.ai",
      "requestID": "1234567890"
    }
  ]
}      
```

For more information on bulk updates configuration, see Process Engine Setup:

[Process Engine Setup](../../../../../setup-guides/flowx-engine-setup-guide/engine-setup#topics-related-to-the-task-management-plugin)